--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+
+}
+#root{
+  display:flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -12,11 +16,15 @@
   height: 150px;
   padding: 20px;
   color: white;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
 }
 
 .App-title {
   font-size: 1.5em;
   color: blueviolet;
+  text-align: center;
 }
 
 .App-intro {
